deployments/kubernetes/istio/namespace-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apm-system
  labels:
    istio-injection: enabled
    name: apm-system
